test/invalid/NestedCommentsNotAllowed/NestedCommentsNotAllowed.plume
/**
 * Comments like Java/C - not nested.
 *
 * @author Diogo Marques, 30100
 */
 class NestedCommentsNotAllowed extends Object is

  /* comment /* */ nested comment */